codeocean/spec/testcasedatajava/NotAStatementTest.txt
./org/example/RecursiveMath.java:12: error: not a statement
            "test";
            ^
1 error
make: *** [Makefile:5: test] Error 1
